fix backspace button allign no wrap

--- a/docs/css/styleties.css
+++ b/docs/css/styleties.css
@@ -22,7 +22,7 @@
 }
 
 .noWrap {
-  float: left;
+  display: inline-block;
 }
 
 .codeInputButton {
